<resources>
    <string name="app_name">Petagram</string>
    <string name="image">Imagen</string>
    <string name="name">Nombre</string>
    <string name="rating">Rating</string>
    <string name="last_five">5</string>
    <string name="about">Acerca de</string>
    <string name="contact">Contacto</string>

    <string name="pimage">Imagen</string>
    <string name="pname">Nombre</string>
    <string name="prating">Telefono</string>
    <string name="ppets">Mascotas</string>
    <string name="pbundle">Bundle</string>
    <string name="pDetailUrl">detailUrl</string>
    <string name="pDetailPhoto">detailPhoto</string>

    <string name="form_name">Nombre completo</string>
    <string name="form_email">Email</string>
    <string name="form_message">Mensaje</string>
    <string name="bt_send">Enviar mensaje</string>

    <string name="about_developer">Petagram by: Jonathan Botero Gomez</string>
    <string name="about_support">soporte: jonathanboterog@gmail.com</string>
    <string name="about_version">v1.0.0</string>

    <string name="api_cnx_fail">Fallo en la Conexión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_name">jboterodevelop</string>

</resources>
