<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ingenico.petagram.OptionMenu.About"
    android:background="@color/colorPrimary">

    <include
        android:id="@+id/incActionbarAbout"
        layout="@layout/actionbar"
        app:layout_scrollFlags="scroll|enterAlways"/>

    <ImageView
        android:id="@+id/imgCatCenter"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/cattied"
        android:contentDescription="@string/image"/>

    <TextView
        android:id="@+id/tvDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgCatCenter"
        android:text="@string/about_developer"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/colorAccentLightLight"/>

    <TextView
        android:id="@+id/tvsupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDeveloper"
        android:text="@string/about_support"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/colorAccentLightLight"/>

    <TextView
        android:id="@+id/tvversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvsupport"
        android:text="@string/about_version"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/colorAccentLightLight"/>

</RelativeLayout>
