<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ingenico.petagram.OptionMenu.ContactForm">

    <include
        android:id="@+id/incActionbarForm"
        layout="@layout/actionbar"
        app:layout_scrollFlags="scroll|enterAlways"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_below="@+id/incActionbarForm">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="top"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_name"
                    android:inputType="textPersonName|textNoSuggestions"
                    android:importantForAutofill="no"
                    android:singleLine="true"
                    android:ems="10"
                    android:maxLength="50"
                    android:hint="@string/form_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_email"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:importantForAutofill="no"
                    android:singleLine="true"
                    android:ems="10"
                    android:hint="@string/form_email"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_message"
                    android:inputType="textMultiLine|textNoSuggestions"
                    android:importantForAutofill="no"
                    android:singleLine="false"
                    android:ems="10"
                    android:hint="@string/form_message"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/bt_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bt_send"
            android:theme="@style/MyButtonRaised"
            android:onClick="OnClickSend" />
    </LinearLayout>

</RelativeLayout>
