<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/cvContact"
    android:layout_margin="20dp"
    app:cardCornerRadius="@dimen/corner_radius_cardview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="@dimen/cardview_padding">

        <ImageView
            android:id="@+id/imgContactPhoto"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/cateyes"
            android:background="@color/colorItemRecyclerView"
            android:contentDescription="@string/image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="@dimen/cardview_padding">

            <ImageView
                android:id="@+id/imgLike"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/like_64"
                android:layout_margin="10dp"
                android:layout_weight="0.1"
                android:contentDescription="@string/image"/>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_gravity="center_vertical"
                android:gravity="start"
                android:textSize="@dimen/cardview_name_fontsize"
                android:textStyle="bold"
                android:layout_weight="0.4"/>

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:textSize="@dimen/cardview_name_fontsize"
                android:textStyle="bold"
                android:layout_weight="0.4"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/likecount_64"
                android:layout_margin="10dp"
                android:layout_weight="0.1"
                android:contentDescription="@string/image"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>